The Samba-Bugzilla – Bug 11359
strsep is not available on Solaris
Last modified: 2015-08-04 14:15:08 UTC
When building Samba 4.2.2 on Solaris 10 strsep is used although it is not available: [3610/3998] Linking default/source4/client/smbclient4 Undefined first referenced symbol in file strsep default/source4/librpc/libdcerpc.so ld: fatal: symbol referencing errors. No output written to /home/dam/mgar/pkg/samba/trunk/work/solaris10-sparc/build-isa-sparcv8plus/samba-4.2.2/bin/default/source4/client/smbclient4 collect2: error: ld returned 1 exit status The issue appeared earlier in other functions: https://lists.samba.org/archive/samba-technical/2006-August/048511.html Best regards -- Dago
with 4.2.3 still the same: [3568/3949] Linking default/source4/libcli/wbclient/libLIBWBCLIENT-OLD-samba4.so Undefined first referenced symbol in file strsep default/source4/librpc/libdcerpc.so ld: fatal: symbol referencing errors. No output written to /home/jh/opencsw/samba/branches/samba4/work/solaris10-sparc/build-isa-sparcv8plus/samba-4.2.3/bin/default/source4/client/smbclient4 A fix would be nice
Created attachment 11263 [details] Fix for master. Can you confirm this works for you ?
patch seems not complete: [ 8/3949] Compiling lib/replace/xattr.c ../lib/replace/replace.c:471:7: error: conflicting types for 'rep_strsep' char *rep_strsep(char **pps, const char *delim) ^ In file included from ../lib/replace/replace.c:26:0: ../lib/replace/replace.h:354:7: note: previous declaration of 'rep_strsep' was here char *rep_strsep(const char **pps, const char *delim); ^
Oh, thought I tested that locally, sorry. I'll fix and upload.
Created attachment 11284 [details] Updated fix for master. Please confirm this works for you and I'll get it into master, 4.2.next, 4.1.next.
looks good now. Builds without problems
Created attachment 11293 [details] git-am cherry-pick from master for 4.3.next 4.2.next, 4.1.next. Already reviewed by Ira.
Karolin please add to 4.1.next, 4.2.next ! Thanks, Jeremy.
Jeremy, what's with 4.3.next?
(In reply to Stefan (metze) Metzmacher from comment #10) > Jeremy, what's with 4.3.next? Do we need to port to 4.3.0 separately ? I thought it was going to pick up what's in master. If not, let me know and I'll create a separate git tree locally for it and make sure I back-port any fix I do.
(In reply to Jeremy Allison from comment #11) Yes, we have v4-3-test and v4-3-stable now...
Pushed to autobuild-v4-[1,2,3]-test
(In reply to Stefan Metzmacher from comment #13) Pushed to v4-[1,2,3]-test